--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,81 @@ pandas==2.1.3
 tqdm==4.64.1
 dvc==3.37.0
 nba_api==1.4.1
-scikit-learn==1.3.2
+scikit-learn~=1.4.0
 chardet==5.2.0
 fastparquet==2023.10.1
+fsspec~=2023.12.2
+funcy~=2.0
+scmrepo~=2.0.4
+rich~=13.7.0
+colorama~=0.4.6
+shtab~=1.6.5
+dpath~=2.1.6
+pygtrie~=2.5.0
+networkx~=3.2.1
+celery~=5.3.6
+kombu~=5.3.5
+psutil~=5.9.8
+configobj~=5.0.8
+shortuuid~=1.0.11
+gto~=1.6.2
+PyYAML~=6.0.1
+requests~=2.31.0
+voluptuous~=0.14.1
+platformdirs~=3.11.0
+pyparsing~=3.1.1
+dulwich~=0.21.7
+packaging~=23.2
+attrs~=23.2.0
+pathspec~=0.12.1
+grandalf~=0.8
+gitdb~=4.0.11
+typing_extensions~=4.9.0
+click~=8.1.7
+typer~=0.9.0
+entrypoints~=0.4
+tabulate~=0.9.0
+semver~=3.0.2
+pydantic~=2.5.3
+cffi~=1.16.0
+pip~=23.3.2
+distro~=1.9.0
+wheel~=0.41.2
+cryptography~=42.0.1
+filelock~=3.13.1
+amqp~=5.2.0
+vine~=5.1.0
+setuptools~=68.2.0
+numpy~=1.26.3
+pytz~=2023.3.post1
+Pygments~=2.17.2
+idna~=3.6
+multidict~=6.0.4
+smmap~=5.0.1
+omegaconf~=2.3.0
+billiard~=4.2.0
+mdurl~=0.1.2
+pydot~=2.0.0
+scipy~=1.12.0
+threadpoolctl~=3.2.0
+aiohttp~=3.9.1
+python-dateutil~=2.8.2
+pygit2~=1.13.3
+yarl~=1.9.4
+joblib~=1.3.2
+orjson~=3.9.12
+tomlkit~=0.12.3
+wcwidth~=0.2.13
+aiosignal~=1.3.1
+frozenlist~=1.4.1
+certifi~=2023.11.17
+cramjam~=2.8.0
+urllib3~=2.1.0
+asyncssh~=2.14.2
+six~=1.16.0
+sqltrie~=0.11.0
+diskcache~=5.6.3
+pydantic_core~=2.14.6
+pycparser~=2.21
+appdirs~=1.4.4
+watchdog~=3.0.0
